@@ -1,8 +1,6 @@
 package com.vanseed.mimas.common.utils;
 
-import java.security.Key;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
+import java.security.*;
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -10,93 +8,78 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import javax.crypto.spec.SecretKeySpec;
 
-import org.apache.log4j.Logger;
+import com.vanseed.mimas.common.exception.ExceptionUtils;
+import org.apache.commons.codec.DecoderException;
+import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.codec.binary.Hex;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.util.StringUtils;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 
 @SuppressWarnings("restriction")
 public class EncryptUtils {
-	private static Logger logger = Logger.getLogger(EncryptUtils.class);
-	
-	public static String SHA1(String decript) {
-		try {
-			MessageDigest digest = java.security.MessageDigest
-					.getInstance("SHA-1");
-			digest.update(decript.getBytes());
+	private static Logger logger = LoggerFactory.getLogger(EncryptUtils.class);
 
-			byte messageDigest[] = digest.digest();
-			// Create Hex String
-			StringBuffer hexString = new StringBuffer();
-			// 字节数组转换为 十六进制 数
-			for (int i = 0; i < messageDigest.length; i++) {
-				String shaHex = Integer.toHexString(messageDigest[i] & 0xFF);
-				if (shaHex.length() < 2) {
-					hexString.append(0);
-				}
-				hexString.append(shaHex);
-			}
+    private static SecureRandom random = new SecureRandom();
 
-			return hexString.toString();
+    private static final String SHA = "SHA";
+    private static final String SHA1 = "SHA-1";
+    private static final String MD5 = "MD5";
 
-		} catch (NoSuchAlgorithmException e) {
-			e.printStackTrace();
-		}
-		return "";
-	}
+    /**
+     * SHA-1 散列
+     */
+    public static String SHA1(String input) {
+        return SHA1(input, null, 1);
+    }
 
-	public static String SHA(String decript) {
-		try {
-			MessageDigest digest = java.security.MessageDigest.getInstance("SHA");
-			digest.update(decript.getBytes());
-			byte messageDigest[] = digest.digest();
-			// Create Hex String
-			StringBuffer hexString = new StringBuffer();
-			// 字节数组转换为 十六进制 数
-			for (int i = 0; i < messageDigest.length; i++) {
-				String shaHex = Integer.toHexString(messageDigest[i] & 0xFF);
-				if (shaHex.length() < 2) {
-					hexString.append(0);
-				}
-				hexString.append(shaHex);
-			}
-			return hexString.toString();
+    /**
+     * SHA-1 散列
+     */
+    public static String SHA1(String input, String salt, int iterations) {
+        return encodeHex( digest(input.getBytes(), SHA1, salt!=null?salt.getBytes():null, iterations) );
+    }
 
-		} catch (NoSuchAlgorithmException e) {
-			logger.error(e.getMessage(), e);
-		}
-		return "";
-	}
+    /**
+     * SHA 散列
+     */
+    public static String SHA(String input) {
+        return encodeHex(digest(input.getBytes(), SHA, null, 1));
+    }
 
+    /**
+     * MD5 散列
+     */
 	public static String MD5(String input) {
-		try {
-			// 获得MD5摘要算法的 MessageDigest 对象
-			MessageDigest mdInst = MessageDigest.getInstance("MD5");
-			// 使用指定的字节更新摘要
-			mdInst.update(input.getBytes());
-			// 获得密文
-			byte[] md = mdInst.digest();
-			// 把密文转换成十六进制的字符串形式
-			StringBuffer hexString = new StringBuffer();
-			// 字节数组转换为 十六进制 数
-			for (int i = 0; i < md.length; i++) {
-				String shaHex = Integer.toHexString(md[i] & 0xFF);
-				if (shaHex.length() < 2) {
-					hexString.append(0);
-				}
-				hexString.append(shaHex);
-			}
-
-			return hexString.toString();
-		} catch (NoSuchAlgorithmException e) {
-			logger.error(e.getMessage(), e);
-		}
-
-		return "";
+	    return encodeHex(digest(input.getBytes(), MD5, null, 1));
 	}
 
+    /**
+     * 对字符串进行散列, 支持md5, sha, sha1算法.
+     */
+    private static byte[] digest(byte[] input, String algorithm, byte[] salt, int iterations) {
+        try {
+            MessageDigest digest = MessageDigest.getInstance(algorithm);
+
+            if (salt != null) {
+                digest.update(salt);
+            }
+
+            byte[] result = digest.digest(input);
+
+            for (int i = 1; i < iterations; i++) {
+                digest.reset();
+                result = digest.digest(result);
+            }
+            return result;
+        } catch (GeneralSecurityException e) {
+            throw ExceptionUtils.unchecked(e);
+        }
+    }
+
+	/**
+	 * AES 加密
+	 */
 	public static byte[] encryptAES(String content, String password) {
 		try {
 			if(StringUtils.isEmpty(password) || password.length() <16 || content == null) {
@@ -123,6 +106,9 @@ public class EncryptUtils {
 		return null;
 	}
 
+	/**
+	 * AES 解密
+	 */
 	public static byte[] decryptAES(byte[] content, String password) {
 		try {
 			if(StringUtils.isEmpty(password) || password.length() <16 || content == null) {
@@ -149,14 +135,9 @@ public class EncryptUtils {
 	
 	/**
 	 * DES 加密
-	 * 
-	 * @param data
-	 * @param key
-	 * @return
-	 * @throws Exception
 	 */
 	public static byte[] encryptDES(String content, String key) throws Exception {
-		Key k = toKey(decryptBASE64(key));
+		Key k = toKey(decodeBASE64(key));
 		Cipher cipher = Cipher.getInstance("DES");
 		cipher.init(Cipher.ENCRYPT_MODE, k);
 		byte[] byteContent = content.getBytes("utf-8");
@@ -166,14 +147,9 @@ public class EncryptUtils {
 	
 	/**
 	 * DES解密
-	 * 
-	 * @param data
-	 * @param key
-	 * @return
-	 * @throws Exception
 	 */
 	public static byte[] decryptDES(byte[] data, String key) throws Exception {
-		Key k = toKey(decryptBASE64(key));
+		Key k = toKey(decodeBASE64(key));
 
 		Cipher cipher = Cipher.getInstance("DES");
 		cipher.init(Cipher.DECRYPT_MODE, k);
@@ -181,33 +157,45 @@ public class EncryptUtils {
 		return cipher.doFinal(data);
 	}
 
-	public static byte[] decryptBASE64(String key) {
+    /**
+     * BASE64遍码. URL安全(将Base64中的URL非法字符'+'和'/'转为'-'和'_', 见RFC3548).
+     */
+    public static String encodeBASE64(byte[] input) {
+        return Base64.encodeBase64String(input);
+    }
+
+	/**
+	 * BASE64解码.
+	 */
+	public static byte[] decodeBASE64(String input) {
 		try {
-			return new BASE64Decoder().decodeBuffer(key);
+            return Base64.decodeBase64(input);
 		} catch (Exception e) {
 		}
 		return null;
 	}
 
-	public static String encryptBASE64(byte[] key) {
-		return (new BASE64Encoder()).encodeBuffer(key);
-		
-	}
-	
-	public static String byte2hex(byte[] bytes) {
-		StringBuffer hexString = new StringBuffer();
-		
-		// 字节数组转换为 十六进制 数
-		for (int i = 0; i < bytes.length; i++) {
-			String shaHex = Integer.toHexString(bytes[i] & 0xFF);
-			if (shaHex.length() < 2) {
-				hexString.append(0);
-			}
-			hexString.append(shaHex);
+    /**
+     * Hex编码.
+     */
+    public static String encodeHex(byte[] input)
+    {
+        return Hex.encodeHexString(input);
+    }
+
+	/**
+	 * Hex解码.
+	 */
+	public static byte[] decodeHex(String input)
+	{
+		try {
+			return Hex.decodeHex(input.toCharArray());
+		} catch (DecoderException e) {
+			logger.error("Hex解码失败，请检查!", e);
+			throw new RuntimeException(e);
 		}
-		
-		return hexString.toString();
 	}
+
 	
 	/**
 	 * 转换密钥<br>
@@ -227,4 +215,17 @@ public class EncryptUtils {
 
 		return secretKey;
 	}
+
+    /**
+     * 生成随机的Byte[]作为salt.
+     *
+     * @param numBytes byte数组的大小
+     */
+    public static String generateSalt(int numBytes) {
+        //Validate.isTrue(numBytes > 0, "numBytes argument must be a positive integer (1 or larger)", numBytes);
+
+        byte[] bytes = new byte[numBytes];
+        random.nextBytes(bytes);
+        return encodeHex(bytes);
+    }
 }
